Added model and backend fetch

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".ProductList" />
-        <activity android:name=".ProductDetails"></activity>
+        <activity android:name=".ProductDetails" />
+        <activity android:name=".AddProduct"></activity>
     </application>
 
 </manifest>
